--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,4 +1,11 @@
-﻿
+﻿<head>
+    <style>
+        div {
+            position: absolute;
+        }
+    </style>
+</head>
+
 <div>
     <img id="da" src="~/Images/pilt3.png" alt="Alternate Text" />
 </div>
