--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,4 +1,11 @@
-﻿
+﻿<head>
+    <style>
+        div{
+            position:absolute;
+        }
+    </style>
+</head>
+
 <div>
     <img src="~/Images/pilt1.png" alt="Alternate Text" />
 </div>
