--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,14 @@
 ﻿@{
         ViewBag.Title = "Kodu leht";
-    }
+    }<head>
+    <style>
+
+        img {
+            width: 1200px;
+            height: 900px;
+        }
+    </style>
+</head>
 
     <div class="jumbotron">
         <h1>Pealeht</h1>
