--- a/Views/Home/Kutse.cshtml
+++ b/Views/Home/Kutse.cshtml
@@ -1,4 +1,11 @@
-﻿
+﻿<head>
+    <style>
+        img {
+            width: 1200px;
+            height: 900px;
+        }
+    </style>
+</head>
 @{
     ViewBag.Title = "Kutse";
 }
