--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Kutse peole", "Kutse", "Home")</li>
                     <li>@Html.ActionLink("Üldinfo", "About", "Home")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Külalised", "Guests", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
