--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Üldinfo", "About", "Home")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Külalised", "Guests", "Home")</li>
+                    <li>@Html.ActionLink("Peod", "Holidays", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
