--- a/Views/Home/Guests.cshtml
+++ b/Views/Home/Guests.cshtml
@@ -1,57 +1,71 @@
 ﻿@model IEnumerable<WebApplication1.Models.Guest>
 
 @{
-    ViewBag.Title = "Guests";
+    ViewBag.Title = "Külalised";
 }
 
-<h2>Guests</h2>
+<h2>Külalised</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Loo uus", "Create")
+</p>
+<p>
+    @Html.ActionLink("Kõik", "Guests")
+    |
+    @Html.ActionLink("Tulevad", "Accept")
+    |
+    @Html.ActionLink("Loobusid", "Reject")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            Nimi
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Age)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WillAttend)
+            Kas osaleb
         </th>
         <th></th>
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Age)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WillAttend)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@if (ViewBag.Will!=null)
+{
+    foreach (var item in Model)
+    {
+        if (item.WillAttend == ViewBag.Will)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.WillAttend)
+                </td>
+                <td>
+                    @Html.ActionLink("Muuda", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Üksikasjad", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Kustuta", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+    }
+}
+else
+{
+    foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.WillAttend)
+            </td>
+            <td>
+                @Html.ActionLink("Muuda", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Üksikasjad", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Kustuta", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 }
 
 </table>
