--- a/Views/Home/Holidays.cshtml
+++ b/Views/Home/Holidays.cshtml
@@ -7,7 +7,7 @@
 <h2>Holidays</h2>
 
 <p>
-    @Html.ActionLink("Lisa uus", "hCreate")
+    @Html.ActionLink("Loo uus", "hCreate")
 </p>
 <p>
     @Html.ActionLink("Kõik", "Holidays")
